@startuml

class Pets {
  - age: int
  - color: string
  - isNeutered: boolean
}

class Species {
  - speciesID: int
  - speciesName: string
}

class Breed {
  - breedID: int
  - breedName: string
  - speciesID: int
  - isPureBred: boolean
  - isMixedBreed: boolean
  + _construct()
  + getBreedID(): int
  + getBreedName(): string
  + getSpeciesID(): int
  + getIsPureBred(): boolean
  + getIsMixedBreed(): boolean
}

class Toys {
  - toysID: int
  - toysName: string
  - bestFor: string
  + _construct()
  + getToysID(): int
}

class Pricing {
  - itemID: int
  - itemType: string
  - cost: double
  - onSale: boolean
  + _construct()
}

Pets --|> Species
Breed --|> Species
Toys --|> Pricing

@enduml
